crates/analyzer/tests/snapshots/errors__call_balance_with_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance` expects 0 arguments, but 1 was provided
   ┌─ src/evm.fe:56:8
   │
56 │ pub fn balance() -> u256:
   │        ^^^^^^^ expects 0 arguments
   │
   ┌─ [snippet]:3:21
   │
 3 │   std::evm::balance(address(0))
   │                     ---------- supplied 1 argument


